--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -11,12 +11,18 @@
 <h3>Tickets</h3>
 <div id="tickets">
 	<%= f.simple_fields_for :ticket_types do |ticket_type| %>
-		<%= render 'ticket_type_fields', f: ticket_type %>
-		<div class="links">
-			<%= link_to_add_association 'Add ticket', f, :ticket_types %>
-		</div>
+	<%= render 'ticket_type_fields', f: ticket_type %>
 	<% end %>
 </div>
+<div class="links">
+		<%= link_to_add_association 'Add ticket', f, :ticket_types %>
+</div>
 
-<%= f.button :submit, "Create", class: "my-button" %>
+<% if @event.new_record? %>  
+	<%= f.button :submit, "Create", class: "my-button" %>
+<% else %>                      
+	<%= f.button :submit, "Update", class: "my-button" %>  
+<% end %>
+
+
 <% end %>
