--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,16 @@
   <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
     <a class="navbar-brand" href="<%= root_path %>">Coder Ticket</a>
     <ul class="nav navbar-nav">
-     
+
       <% if user_signed_in? %>
       <li class="nav-item">
         <%= link_to "Log out",destroy_user_session_path,class: "nav-link",method: 'delete'  %>
+      </li>
+       <li class="nav-item">
+      <%= link_to "Create events",new_event_path,class: "nav-link"  %>
+      </li>
+      <li class="nav-item">
+      <%= link_to "Your events",user_events_path,class: "nav-link"  %>
       </li>
       <% else %>
       <li class="nav-item">
