--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,18 @@
     <ul class="nav navbar-nav">
 
       <% if user_signed_in? %>
-      <li class="nav-item">
-        <%= link_to "Log out",destroy_user_session_path,class: "nav-link",method: 'delete'  %>
-      </li>
-       <li class="nav-item">
-      <%= link_to "Create events",new_event_path,class: "nav-link"  %>
-      </li>
-      <li class="nav-item">
-      <%= link_to "Your events",user_events_path,class: "nav-link"  %>
-      </li>
+          <li class="nav-item">
+             <%= link_to "Log out",destroy_user_session_path,class: "nav-link",method: 'delete'  %>
+          </li>
+           <li class="nav-item">
+              <%= link_to "Create events",new_event_path,class: "nav-link"  %>
+          </li>
+          <li class="nav-item">
+             <%= link_to "Your events",user_events_path,class: "nav-link"  %>
+          </li>
+           <li class="nav-item">
+             <%= link_to "Your Tickets",user_tickets_path,class: "nav-link"  %>
+          </li>
       <% else %>
       <li class="nav-item">
         <%= link_to "Log In",new_user_session_path,class: "nav-link"  %>
@@ -35,7 +38,6 @@
     </ul>
   </nav>  
 
-  <div class="container">
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
@@ -49,7 +51,7 @@
     <% end %>
 
     <%= yield %>
-  </div>
+ 
 
 </body>
 </html>
