--- a/app/views/events/user_events.html.erb
+++ b/app/views/events/user_events.html.erb
@@ -1,5 +1,32 @@
-<h1>This is your events:</h1>
-<% @events.each do |event| %>
-	<%= event.name %>
-	<%= link_to "Edit", edit_event_path(event)  %>
-<% end %>
+<div class="container">
+	<h1>This is your events:</h1>
+
+	<div class="table" style="margin-top: 20px;">
+		<div class="row thead" style="padding: 10px 0px 10px 0px;background-color: black;color:white;">
+	
+			<div class="col-sm-1">#</div>
+			<div class="col-sm-4">Event Name:</div>
+			<div class="col-sm-3">Created Time:</div>
+			<div class="col-sm-2">Published:</div>
+			<div class="col-sm-2">Modify:</div>
+	
+		</div>
+
+		<% @events.each.with_index do |event,i| %>
+		<div class="row" style="padding-top: 10px;">
+			<div class="col-sm-1"><%= i + 1 %></div>
+			<div class="col-sm-4"><%= event.name %></div>
+			<div class="col-sm-3"><%= event.created_at  %></div>
+			<% if event.published %>
+				<div class="col-sm-2">YES</div>
+			<% else %>
+				<div class="col-sm-2"><%= link_to 'Publish', set_publish_event_path(event),class: 'btn btn-warning' %></div>
+			<% end %>
+			<div class="col-sm-2"><%= link_to "Edit", edit_event_path(event),class: 'btn btn-primary'  %></div>
+		</div>
+	</div>
+	<% end %>
+
+</table>
+
+</div>
