--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,10 @@
            <li class="nav-item">
              <%= link_to "Your Tickets",user_tickets_path,class: "nav-link"  %>
           </li>
+          <li class="nav-item">
+             <%= link_to "Create new Venue",new_venue_path,class: "nav-link"  %>
+          </li>
+          
       <% else %>
       <li class="nav-item">
         <%= link_to "Log In",new_user_session_path,class: "nav-link"  %>
