--- a/app/views/tickets/user_tickets.html.erb
+++ b/app/views/tickets/user_tickets.html.erb
@@ -1,23 +1,25 @@
 <h1>Your ticket</h1>
 
 <table class="table">
-		<thead class="thead-inverse">
-			<tr>
-				<th>#</th>
-				<th> Ticket Name </th>
-       			 <th> Unit Price </th>
-       			 <th> Quantity </th>
-			</tr>
-		</thead>
-        
-      <tbody>
-       <% @tickets.each.with_index do |ticket,i| %>
-        <tr>
-           <td><%= i+1 %></td>
-          <td> <%= ticket.ticket_type.name %> </td>
-          <td> <%= number_to_currency(ticket.ticket_type.price, unit: 'VND ', precision: 0) %> </td>
-          <td> <%= ticket.quantity %> </td>
-        </tr>
-        <% end %> 
-        </tbody>
- </table>
+  <thead class="thead-inverse">
+   <tr>
+    <th>#</th>
+    <th> Ticket Name </th>
+    <th> Date Bought </th>
+    <th> Unit Price </th>
+    <th> Quantity </th>
+  </tr>
+</thead>
+
+<tbody>
+ <% @tickets.each.with_index do |ticket,i| %>
+ <tr>
+   <td><%= i+1 %></td>
+   <td> <%= ticket.ticket_type.name %> </td>
+   <td> <%= ticket.created_at %> </td>
+   <td> <%= number_to_currency(ticket.ticket_type.price, unit: 'VND ', precision: 0) %> </td>
+   <td> <%= ticket.quantity %> </td>
+ </tr>
+ <% end %> 
+</tbody>
+</table>
