--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,6 @@
-<h2>Sign up</h2>
+<div class="container">
+<h2 style="background-color: #587de2;color:white;padding: 10px;text-align: center;">SIGN UP</h2>
+
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= f.error_notification %>
@@ -11,8 +13,8 @@
 </div>
 
 <div class="form-actions">
-	<%= f.button :submit, "Sign up" %>
+	<%= f.button :submit, "Sign up",class: "btn btn-warning" %>
 </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
