--- a/app/views/events/_ticket_type_fields.html.erb
+++ b/app/views/events/_ticket_type_fields.html.erb
@@ -1,7 +1,7 @@
-<div class="nested-fields">
+<div class="nested-fields" style="padding:5px; margin:10px 0px 10px 0px; border: 1px gray dotted;">
 	<%= f.input :name %>
 	<%= f.input :price %>
 	<%= f.input :max_quantity %>
-	<%= link_to_remove_association "remove ticket", f %>
+	<%= link_to_remove_association "remove ticket", f, class: "btn btn-danger" %>
 	
 </div>
