--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,3 +1,4 @@
-<h1>Edit Events:</h1>
-
-<%= render 'form' %>
+<div class="container">
+<h1 style="background-color: #587de2;color:white;padding: 10px;text-align: center;">Edit Events:</h1>
+	<%= render 'form' %>
+</div>
