--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New Events:</h1>
+<div class="container">
+<h1 style="background-color: #587de2;color:white;padding: 10px;text-align: center;">New Events:</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
