--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,8 @@
              <%= link_to "Your Tickets",user_tickets_path,class: "nav-link"  %>
           </li>
           <li class="nav-item">
-             <%= link_to "Create new Venue",new_venue_path,class: "nav-link"  %>
+             <%= link_to "Create Venue",new_venue_path,class: "nav-link"  %>
           </li>
-          
       <% else %>
       <li class="nav-item">
         <%= link_to "Log In",new_user_session_path,class: "nav-link"  %>
@@ -53,9 +52,9 @@
     <% if flash[:success] %>
     <div class="alert alert-success"><%= flash[:success] %></div>
     <% end %>
-
-    <%= yield %>
+  
  
+    <%= yield %>
 
 </body>
 </html>
